--- a/index.html
+++ b/index.html
@@ -5,126 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yuki Ueda - Personal Homepage</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #fdffff;
-            display: flex;
-        }
-
-        header {
-            background-color: #171717;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
-            text-align: left;
-        }
-
-        aside {
-            width: 240px;
-            /* Set the width of the sidebar */
-            background-color: #333;
-            color: #fff;
-            padding: 1em;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-            /* Add a shadow to the sidebar */
-        }
-
-        main {
-            max-width: 1200px;
-            margin: 30px;
-        }
-
-        section {
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            font-size: 200%;
-            color: #f5f0f0;
-            margin-top: 50px;
-            margin-bottom: 60px;
-            margin-left: 20px;
-        }
-
-        h2 {
-            font-size: 260%;
-            color: #121111;
-            margin-top: 30px;
-            margin-bottom: 60px;
-            margin-left: 10px;
-        }
-
-        h3 {
-            color: #000000;
-            margin-top: 30px;
-            margin-bottom: 60px;
-            margin-left: 20px;
-
-        }
-
-        p {
-            color: #434141;
-            margin-left: 20px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 1em;
-            background-color: #333;
-            color: #fff;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            display: block;
-            margin-bottom: 15px;
-            /* Add space between menu items */
-            margin-left: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="common/styles.css">
 </head>
 
 <body>
-
-    <!--<header>-->
-    <aside>
-        <h1>
-            Yuki Ueda
-        </h1>
-        <!--
-        <p>Welcome to my personal homepage</p>
-        -->
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="history.html">略歴 / Brief history</a>
-            <a href="papers.html">論文, 発表 / Papers, Talks</a>
-        </nav>
-    </aside>
-    <!--</header>-->
+    <!-- sidebar -->
+    <script>
+        // Fetch and inject the entire side content (including styles)
+        fetch('common/side.html')
+            .then(response => response.text())
+            .then(html => {
+                document.body.insertAdjacentHTML('afterbegin', html);
+            })
+            .catch(error => console.error('Error loading sidebar:', error));
+    </script>
+    <!-- main -->
     <main>
-        <h2>
+        <p class="page_title">
             Home
-        </h2>
+        <p>
         <section>
-            <p><div style="margin-left:10px">
-                <font size="5">
-                    上田 祐暉 <br>
-                </font>
-            </div></p>
+            <p class="section_title">
+                上田 祐暉
+            </p>
             <p>
                 博士(数理科学)
             </p>
             <p>
-                <a href="http://mmc01.es.hokudai.ac.jp/msc/">北海道大学 電子科学研究所 付属社会創造数学研究センター</a> <a
-                    href="http://mmc01.es.hokudai.ac.jp/">人間数理研究分野</a> 特任助教
+                <a href="http://mmc01.es.hokudai.ac.jp/msc/">
+                    北海道大学 電子科学研究所 付属社会創造数学研究センター
+                </a> 
+                <a href="http://mmc01.es.hokudai.ac.jp/">
+                    人間数理研究分野
+                </a> 
+                特任助教
             </p>
             <p>
                 研究テーマ: 偏微分方程式の数値解析
@@ -134,22 +48,25 @@
             </p>
         </section>
         <section>
-            <p><div style="margin-left:6px">
-                <font size="5">
-                    (Mr.) Yuki Ueda
-                </font>
-            </div></p>
+            <p class="section_title">
+                (Mr.) Yuki Ueda
+            </p>
             <p>
                 Ph.D. Mathematical Sciences
             </p>
             <p>
-                Project Assistant Professor, <a href="http://mmc01.es.hokudai.ac.jp/">Laboratory of Mathematical
-                    Modeling</a>,
+                Project Assistant Professor, 
+                <a href="http://mmc01.es.hokudai.ac.jp/">
+                    Laboratory of Mathematical Modeling
+                </a>,
             </p>
-            <p><div style="margin-left:50px">
-                <a href="http://mmc01.es.hokudai.ac.jp/msc/">Research Center of Mathematics for Social Creativity,
-                    Research Institute for Electronic Science, Hokkaido University</a>
-            </div></p>
+            <p style="margin-left:50px">
+                <a href="http://mmc01.es.hokudai.ac.jp/msc/">
+                    Research Center of Mathematics for Social Creativity,
+                    Research Institute for Electronic Science, 
+                    Hokkaido University
+                </a>
+            </p>
             <p>
                 Research theme: numerical analysis of partial differential equations
             </p>
@@ -164,17 +81,17 @@
             研究者番号: 10835771
         </p>
         <p>
-            ORCID: https://orcid.org/0000-0002-0343-8417
+            ORCID: 
+            <a href="https://orcid.org/0000-0002-0343-8417"> 
+                https://orcid.org/0000-0002-0343-8417 
+            </a>
         </p>
         <p>
-            ResearchGate: https://www.researchgate.net/profile/Yuki_Ueda2
+            ResearchGate: 
+            <a href="https://www.researchgate.net/profile/Yuki_Ueda2"> 
+                https://www.researchgate.net/profile/Yuki_Ueda2 
+            </a>
         </p>
-
-        <p><div style="margin-top:40px;text-align:right">
-            <font size="2">
-            &copy; 2024 Yuki Ueda. All rights reserved.
-        </font>
-        </div></p>
     </main>
 </body>
 
