--- a/history_ja.html
+++ b/history_ja.html
@@ -33,121 +33,153 @@
             <p class="section_title">
                 学歴, 職歴
             </p>
-            <p>
-                2023年10月 - :
-                北海道大学 電子科学研究所 特任助教
-            </p>
-            <p>
-                2021年7月 - 2023年9月:
-                東京大学大学院 数理科学研究科 特任助教 (
-                <a href="https://www.ms.u-tokyo.ac.jp/icms/_2018420213_2020.html">
-                    社会連携講座
-                </a>
-                『冷媒熱流体の数理』)
-            </p>
-            <p>
-                2020年4月 - 2021年6月:
-                早稲田大学 理工学術院 次席研究員 (受け入れ教員:
-                <a href="http://www.fluid.sci.waseda.ac.jp/shibata/top.html">
-                    柴田 良弘
-                </a>
-                )
-            </p>
-            <p>
-                2019年4月 - 2020年3月:
-                香港理工大学 Postdoctoral Fellow (受け入れ教員:
-                <a href="https://www.polyu.edu.hk/ama/profile/byli/">
-                    Buyang Li
-                </a>
-                )
-            </p>
-            <p>
-                2018年4月 - 2019年3月:
-                東京大学大学院 数理科学研究科 特任研究員 (受け入れ教員:
-                <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/">
-                    儀我 美一
-                </a>
-                )
-            </p>
-            <p style="margin-left:50px">
-                雇用元の課題名: 基盤(S) 「
-                <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/kiban2014-j/index.html">
-                    特異構造が支配する非線形現象の高度形態変動解析
-                </a>
-                」
-            </p>
-            <p>
-                2015年4月 - 2018年3月:
-                東京大学大学院 数理科学研究科 博士課程 (指導教官:
-                <a href="http://www.infsup.jp/saito/">
-                    齊藤 宣一
-                </a>
-                )
-            </p>
-            <p style="margin-left:50px">
-                2016年11月 - 2017年1月:
-                Rice University (受入教官:
-                <a href="https://www.tafsm.org/~tezduyar/">
-                    Tayfun E. Tezduyar
-                </a>
-                )
-            </p>
-            <p>
-                2013年4月 - 2015年3月:
-                東京大学大学院 数理科学研究科 修士課程 (指導教官:
-                <a href="http://www.infsup.jp/saito/">
-                    齊藤 宣一
-                </a>
-                )
-            </p>
-            <p>
-                2009年4月 - 2013年3月:
-                東京大学 理学部 数学科
-            </p>
+            <ul>
+                <li>
+                    2023年10月 - :
+                    北海道大学 電子科学研究所 特任助教
+                </li>
+                <li>
+                    2021年7月 - 2023年9月:
+                    東京大学大学院 数理科学研究科 特任助教 (
+                    <a href="https://www.ms.u-tokyo.ac.jp/icms/_2018420213_2020.html">
+                        社会連携講座
+                    </a>
+                    『冷媒熱流体の数理』)
+                </li>
+                <li>
+                    2020年4月 - 2021年6月:
+                    早稲田大学 理工学術院 次席研究員 (受け入れ教員:
+                    <a href="http://www.fluid.sci.waseda.ac.jp/shibata/top.html">
+                        柴田 良弘
+                    </a>
+                    )
+                </li>
+                <li>
+                    2019年4月 - 2020年3月:
+                    香港理工大学 Postdoctoral Fellow (受け入れ教員:
+                    <a href="https://www.polyu.edu.hk/ama/profile/byli/">
+                        Buyang Li
+                    </a>
+                    )
+                </li>
+                <li>
+                    2018年4月 - 2019年3月:
+                    東京大学大学院 数理科学研究科 特任研究員 (受け入れ教員:
+                    <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/">
+                        儀我 美一
+                    </a>
+                    )
+                </li>
+                <ul>
+                    <li>
+                        雇用元の課題名: 基盤(S) 「
+                        <a href="https://www.ms.u-tokyo.ac.jp/~ygiga/kiban2014-j/index.html">
+                            特異構造が支配する非線形現象の高度形態変動解析
+                        </a>
+                        」
+                    </li>
+                </ul>
+                <li>
+                    2015年4月 - 2018年3月:
+                    東京大学大学院 数理科学研究科 博士課程 (指導教官:
+                    <a href="http://www.infsup.jp/saito/">
+                        齊藤 宣一
+                    </a>
+                    )
+                </li>
+                <ul>
+                    <li>
+                        2016年11月 - 2017年1月:
+                        Rice University (受入教官:
+                        <a href="https://www.tafsm.org/~tezduyar/">
+                            Tayfun E. Tezduyar
+                        </a>
+                        )
+                    </li>
+                </ul>
+                <li>
+                    2013年4月 - 2015年3月:
+                    東京大学大学院 数理科学研究科 修士課程 (指導教官:
+                    <a href="http://www.infsup.jp/saito/">
+                        齊藤 宣一
+                    </a>
+                    )
+                </li>
+                <li>
+                    2009年4月 - 2013年3月:
+                    東京大学 理学部 数学科
+                </li>
+            </ul>
         </section>
         <section>
             <p class="section_title">
                 学位
             </p>
-            <p>
-                2018年3月22日 博士(数理科学)
-            </p>
-            <p>
-                2015年3月24日 修士(数理科学)
-            </p>
-            <p>
-                2013年3月26日 学士(理学)
-            </p>
+            <ul>
+                <li>
+                    2018年3月22日 博士(数理科学)
+                </li>
+                <li>
+                    2015年3月24日 修士(数理科学)
+                </li>
+                <li>
+                    2013年3月26日 学士(理学)
+                </li>
+            </ul>
         </section>
         <section>
             <p class="section_title">
                 Fellowship, 受賞歴
             </p>
-            <p>
-                2015年4月 - 2018年3月:
-                <a href="http://fmsp.ms.u-tokyo.ac.jp/">
-                    数物フロンティア・リーディング大学院(FMSP)
-                </a>
-                コース生 (副指導教官: 山本 昌宏)
-            </p>
-            <p>
-                2015年3月: 東京大学大学院 数理科学研究科長賞
-            </p>
+            <ul>
+                <li>
+                    2015年4月 - 2018年3月:
+                    <a href="http://fmsp.ms.u-tokyo.ac.jp/">
+                        数物フロンティア・リーディング大学院(FMSP)
+                    </a>
+                    コース生 (副指導教官: 山本 昌宏)
+                </li>
+                <li>
+                    2015年3月: 東京大学大学院 数理科学研究科長賞
+                </li>
+            </ul>
         </section>
         <section>
             <p class="section_title">
                 プロジェクト
             </p>
-            <p>
-                2021年 - 2026年: 
-                科学研究費助成費用 若手研究
+            <ul>
+                <li>
+                    2021年 - 2026年:
+                    科学研究費助成費用 若手研究
+                </li>
+                <ul>
+                    <li>『
+                        <a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-21K13840/">
+                            流体問題の数値計算手法におけるパラメータの選択について
+                        </a>
+                        』(No.21K13840)
+                    </li>
+                </ul>
+            </ul>
+        </section>
+        <section>
+            <p class="section_title">
+                教育実績
             </p>
-            <p style="margin-left:50px">『
-                <a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-21K13840/">
-                    流体問題の数値計算手法におけるパラメータの選択について
-                </a>
-                』(No.21K13840)
-            </p>
+            <ul>
+                <li>
+                    数学B1(微分積分), 早稲田大学先進理工学部, 2021
+                </li>
+                <li>
+                    Calculus C(2), English-based Undergraduate Program, 早稲田大学基幹理工学部, 2020 - 2021
+                </li>
+                <li>
+                    Calculus A(2), English-based Undergraduate Program, 早稲田大学基幹理工学部, 2020
+                </li>
+            </ul>
+
+
         </section>
     </main>
 </body>
