add researchmap information

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yuki Ueda - Personal Homepage</title>
+    <title>Yuki Ueda</title>
     <link rel="stylesheet" href="common/styles.css">
 </head>
 
@@ -90,6 +90,12 @@
             ResearchGate: 
             <a href="https://www.researchgate.net/profile/Yuki_Ueda2"> 
                 https://www.researchgate.net/profile/Yuki_Ueda2 
+            </a>
+        </p>
+        <p>
+            researchmap:
+            <a href="https://researchmap.jp/yukiueda_am">
+                https://researchmap.jp/yukiueda_am
             </a>
         </p>
     </main>
