add presentation at kanazawa

--- a/papers.html
+++ b/papers.html
@@ -193,6 +193,14 @@
             <ul>
                 <li>
                     儀我美一, <u>上田祐暉</u>,
+                    泡の破裂を表現する簡易モデルの時間周期的な挙動について,
+                    <a href="https://sites.google.com/view/hokuriku-applied-math-seminar/">
+                        北陸応用数理研究会2024
+                    </a>,
+                    石川県政しいのき迎賓館, 2024年3月
+                </li>
+                <li>
+                    儀我美一, <u>上田祐暉</u>,
                     4階全変動流問題のsplit Bregman methodに基づく数値計算,
                     <a href="https://www2.sci.hokudai.ac.jp/dept/math/event/category/pde-seminar">
                         偏微分方程式セミナー
