modify the link

--- a/common/side.html
+++ b/common/side.html
@@ -1,6 +1,6 @@
 <p class="name">Yuki Ueda</p>
 <nav>
-    <p><a href="index.html"> Home </a></p>
-    <p><a href="history_ja.html"> 略歴 / Brief history </a></p>
-    <p><a href="papers.html"> 論文, 発表 / Papers, Talks </a></p>
+    <p><a href="./index.html"> Home </a></p>
+    <p><a href="./history_ja.html"> 略歴 / Brief history </a></p>
+    <p><a href="./papers.html"> 論文, 発表 / Papers, Talks </a></p>
 </nav>
