--- a/papers.html
+++ b/papers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yuki Ueda - Personal Homepage</title>
-    <link rel="stylesheet" href="common/styles.css">
+    <link rel="stylesheet" href="./common/styles.css">
 </head>
 
 <body>
