--- a/history_ja.html
+++ b/history_ja.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yuki Ueda - Personal Homepage</title>
+    <title>Yuki Ueda</title>
     <link rel="stylesheet" href="./common/styles.css">
 </head>
 
