--- a/papers.html
+++ b/papers.html
@@ -178,6 +178,28 @@
                 <li>
                     Yoshikazu Giga, <u>Yuki Ueda</u>,
                     Time periodic profile on a diffusion equation model to describe a bubble cluster with rupture,
+                    Workshop on Numerical Methods and Analysis for PDEs,
+                    Harbin Institute of Technology, Shenzhen, June 2024
+                </li>
+                <li>
+                    Yoshikazu Giga, <u>Yuki Ueda</u>,
+                    Numerical computation for 4th order total variation flow,
+                    <a href="https://ec-convention.com/maifb2024/">
+                        The 81st Fujihara Seminar, Mathematical Aspects for Interfaces and Free Boundaries 2024
+                    </a>,
+                    Hilton Niseko Village, June 2024
+                </li>
+                <li>
+                    Yoshikazu Giga, <u>Yuki Ueda</u>,
+                    Time periodic profile on a diffusion equation model to describe a bubble cluster with rupture,
+                    <a href="https://www2.sci.hokudai.ac.jp/dept/math/event/category/pde-seminar">
+                        PDE seminar
+                    </a>,
+                    Hokkaido University, May 2024
+                </li>
+                <li>
+                    Yoshikazu Giga, <u>Yuki Ueda</u>,
+                    Time periodic profile on a diffusion equation model to describe a bubble cluster with rupture,
                     Hokudai-NYCU Joint Workshop on Applied Mathematics,
                     National Yang-Ming Chiao-Tung University, April 2024
                 </li>
