--- a/history_ja.html
+++ b/history_ja.html
@@ -155,6 +155,9 @@
             <h2>教育実績</h2>
             <ul>
                 <li>
+                    線形代数学I, 北海道大学 全学教育科目 (基礎科目), 2024
+                </li>
+                <li>
                     数学B1(微分積分), 早稲田大学先進理工学部, 2021
                 </li>
                 <li>
