--- a/papers.html
+++ b/papers.html
@@ -176,6 +176,14 @@
             <h2>発表 / Talks</h2>
             <ul>
                 <li>
+                    儀我美一, <u>上田祐暉</u>,
+                    泡の破裂を表現する簡易モデルの時間周期的な挙動について,
+                    <a href="https://www.ms.u-tokyo.ac.jp/icms/daikin-sympo-2024.html">
+                        社会連携講座「冷媒熱流体の数理」公開シンポジウム
+                    </a>,
+                    東京大学, 2024年7月
+                </li>
+                <li>
                     Yoshikazu Giga, <u>Yuki Ueda</u>,
                     Time periodic profile on a diffusion equation model to describe a bubble cluster with rupture,
                     Workshop on Numerical Methods and Analysis for PDEs,
