--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                 https://researchmap.jp/yukiueda_am
             </a>
         </p>
+
+        <img class="photo" src="common/PXL_20240927_034332435.jpg" width="300px">
     </main>
     </div>
 </body>
