--- a/papers.html
+++ b/papers.html
@@ -126,12 +126,6 @@
             <p>Accepted</p>
             <ul>
                 <li>
-
-                </li>
-            </ul>
-            <p>Submitted</p>
-            <ul>
-                <li>
                     Y. Giga* and Y.Ueda.
                     <i>
                         On a diffusion equation with rupture.
@@ -139,6 +133,12 @@
                     [<a href="https://arxiv.org/abs/2308.04754">
                         arXiv
                     </a>]
+                </li>
+            </ul>
+            <p>Submitted</p>
+            <ul>
+                <li>
+                    
                 </li>
             </ul>
             <h3>査読無し / Non Peer-reviewed</h3>
@@ -175,6 +175,30 @@
         <section>
             <h2>発表 / Talks</h2>
             <ul>
+                <li>
+                    <u>Yuki Ueda</u>,
+                    Survey and Application of Bayesian Inference to Inverse Problem,
+                    <a href="https://www.waseda.jp/fsci/mathphys/news/19559">
+                        International Workshop on Multiphase Flows: Analysis, Modelling and Numerics
+                    </a>
+                    Waseda University, January 2025
+                </li>
+                <li>
+                    <u>Yuki Ueda</u>, Junyong Eom, Shinya Uchiumi, Yuma Noda, Hiroshi Suito, Hideki Katagiri, Masaharu Nagayama,
+                    Mathematical Modeling of Glucose-Insulin Metabolism Dynamics and a Bayesian Approach,
+                    <a href="https://www.es.hokudai.ac.jp/symposium/2024/instructions.html">
+                        The 24th RIES-HOKUDAI International Symposium
+                    </a>,
+                    Hokkaido University, December 2024
+                </li>
+                <li>
+                    <u>上田 祐暉</u>, Eom Junyong, 内海晋弥, 野田裕真, 水藤寛, 片桐秀樹, 長山雅晴,
+                    グルコース-インスリン代謝動態モデルの構築とパラメータ推定,
+                    <a href="https://www.mathsoc.jp/section/appliedmath/CAM/2024/">
+                        2024年度応用数学合同研究集会
+                    </a>,
+                    龍谷大学, 2024年12月
+                </li>
                 <li>
                     <u>上田 祐暉</u>, Eom Junyong, 内海晋弥, 野田裕真, Gao Yueyuan, 水藤寛, 久米真司, 片桐秀樹, 長山雅晴,
                     グルコース-インスリン代謝動態モデルの構築とパラメータ推定,
