--- a/card.html
+++ b/card.html
@@ -19,7 +19,7 @@
         main {
             /* flex:1; */
             width: 320px;
-            height: calc(max(830px, 100dvh) - 60px);
+            height: calc(max(1130px, 100dvh) - 60px);
             background-color: #f5f5f5;
             padding: 30px;
         }
@@ -68,6 +68,12 @@
         <p>
             Website: <br> &emsp; <a href="https://yukiueda90.github.io/mypage/", target="_blank">https://yukiueda90.github.io/mypage/</a>
         </p>
+        <div class="center">
+            <figure>
+                <img alt="photo" src="pictures/20250507.jpg" width="200px">
+                <figcaption>2025.05.07</figcaption>
+            </figure>
+        </div>
     </main>
     </div>
 </body>
