--- a/card.html
+++ b/card.html
@@ -26,9 +26,17 @@
         h1 {
             font-size: 24px;
         }
+        h2 {
+            font-size: 18px;
+        }
         img {
             padding-left: 10px;
             padding-right: 10px;
+        }
+        hr {
+            margin-top: 20px;
+            margin-bottom: 20px;
+            border-top: 3px solid #cccccc;
         }
         .center {
             text-align: center;
@@ -53,6 +61,9 @@
         <div class="center">
             <a href="pictures/yuki_ueda.png" download="yuki_ueda.png">download png</a>
         </div>
+
+        <hr>
+
         <h2>
             RIES
         </h2>
