promote to associate professor

--- a/history_ja.html
+++ b/history_ja.html
@@ -29,8 +29,16 @@
             <h2>学歴, 職歴</h2>
             <ul>
                 <li>
-                    2023年10月 - :
-                    北海道大学 電子科学研究所 特任助教
+                    2025年6月 - 現在:
+                    北海道大学 電子科学研究所 准教授
+                </li>
+                <li>
+                    2023年10月 - 2025年5月:
+                    北海道大学 電子科学研究所 特任助教 (受け入れ教員:
+                        <a href="https://mmc01.es.hokudai.ac.jp/">
+                            長山 雅晴
+                        </a>
+                    )
                 </li>
                 <li>
                     2021年7月 - 2023年9月:
@@ -155,7 +163,7 @@
             <h2>教育実績</h2>
             <ul>
                 <li>
-                    線形代数学I, 北海道大学 全学教育科目 (基礎科目), 2024
+                    線形代数学I, 北海道大学 全学教育科目 (基礎科目), 2024 - 現在
                 </li>
                 <li>
                     数学B1(微分積分), 早稲田大学先進理工学部, 2021
