--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="http://mmc01.es.hokudai.ac.jp/">
                     人間数理研究分野
                 </a> 
-                特任助教
+                准教授
             </p>
             <p>研究テーマ: 偏微分方程式の数値解析</p>
             <p>キーワード: 数値解析, 偏微分方程式, NURBS, Isogeometric analysis, 全変動流</p>
@@ -42,7 +42,7 @@
             <h2>(Mr.) Yuki Ueda</h2>
             <p>Ph.D. Mathematical Sciences</p>
             <p>
-                Project Assistant Professor, 
+                Associate Professor, 
                 <a href="http://mmc01.es.hokudai.ac.jp/">
                     Laboratory of Mathematical Modeling
                 </a>,
