--- a/history_en.html
+++ b/history_en.html
@@ -62,6 +62,18 @@
             <h2>Professional Experience</h2>
             <ul>
                 <li>
+                    Associate Professor,
+                    <a href="https://www.es.hokudai.ac.jp/english/">
+                        Research Institute for Electronic Science, Hokkaido University
+                    </a>,
+                    Japan
+                </li>
+                <ul>
+                    <li>
+                        June 2025 - 
+                    </li>
+                </ul>
+                <li>
                     Project Assistant Professor,
                     <a href="https://www.es.hokudai.ac.jp/english/">
                         Research Institute for Electronic Science, Hokkaido University
@@ -70,7 +82,13 @@
                 </li>
                 <ul>
                     <li>
-                        October 2023 -
+                        October 2023 - May 2025
+                    </li>
+                    <li>
+                        Host Researcher:
+                        <a href="https://mmc01.es.hokudai.ac.jp/en/">
+                            Masaharu Nagayama
+                        </a>
                     </li>
                 </ul>
                 <li>
