--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
             <h2>上田 祐暉</h2>
             <p>博士(数理科学)</p>
             <p>
-                <a href="http://mmc01.es.hokudai.ac.jp/msc/">
+                <a href="http://mmc01.es.hokudai.ac.jp/msc/" target="_blank">
                     北海道大学 電子科学研究所 付属社会創造数学研究センター
                 </a> 
-                <a href="http://mmc01.es.hokudai.ac.jp/">
+                &nbsp;
+                <a href="http://mmc01.es.hokudai.ac.jp/" target="_blank">
                     人間数理研究分野
                 </a> 
+                &nbsp;
                 准教授
             </p>
             <p>研究テーマ: 偏微分方程式の数値解析</p>
@@ -43,10 +45,10 @@
             <p>Ph.D. Mathematical Sciences</p>
             <p>
                 Associate Professor, 
-                <a href="http://mmc01.es.hokudai.ac.jp/">
+                <a href="http://mmc01.es.hokudai.ac.jp/" target="_blank">
                     Laboratory of Mathematical Modeling
                 </a>,
-                <a href="http://mmc01.es.hokudai.ac.jp/msc/">
+                <a href="http://mmc01.es.hokudai.ac.jp/msc/" target="_blank">
                     Research Center of Mathematics for Social Creativity,
                     Research Institute for Electronic Science, 
                     Hokkaido University
@@ -63,19 +65,19 @@
         </p>
         <p>
             ORCID: 
-            <a href="https://orcid.org/0000-0002-0343-8417"> 
+            <a href="https://orcid.org/0000-0002-0343-8417" target="_blank"> 
                 https://orcid.org/0000-0002-0343-8417 
             </a>
         </p>
         <p>
             ResearchGate: 
-            <a href="https://www.researchgate.net/profile/Yuki_Ueda2"> 
+            <a href="https://www.researchgate.net/profile/Yuki_Ueda2" target="_blank"> 
                 https://www.researchgate.net/profile/Yuki_Ueda2 
             </a>
         </p>
         <p>
             researchmap:
-            <a href="https://researchmap.jp/yukiueda_am">
+            <a href="https://researchmap.jp/yukiueda_am" target="_blank">
                 https://researchmap.jp/yukiueda_am
             </a>
         </p>
